web/app/themes/envisioningjustice/assets/styles/components/_forms.scss
// Forms

// General form styles
form {
  .actions {
    margin-top: 20px;
  }

  fieldset {
    margin: 0;
    border: 0;
    padding: 0;
  }

  .input-wrap {
    display: flex;
    position: relative;
    margin-top: $padding;
    &::after {
      left: 0;
      right: 0;
      bottom: 0;
      height: 1px;
      content: '';
      position: absolute;
      background-color: $black;
      transition: height .1s ease-out, background-color .1s ease-out;
    }
    &.-focus {
      &::after {
        height: 5px;
      }
    }
    &:first-of-type {
      margin-top: 0;
    }
    label {
      max-width: 200px;
      flex-basis: 200px;
      align-self: center;
      padding: 14px 10px 14px 0;
    }
    input {
      text-align: right;
    }
    &.filled {
      label {
        // display: none;
      }
    }
    &.error {
      margin-bottom: 40px;
    }

    &.textarea-wrap {
      display: block;

      label {
        padding: 0;
        top: $padding;
        left: $padding;
        position: absolute;
      }
      input {
        text-align: left;
      }

      &.-focus,
      &.filled {
        label {
          display: none;
        }
      }
    }
  }

  input:not([type=radio]),
  textarea {
    width: 100%;
    color: inherit;
    display: block;
    border-radius: 0;
    appearance: none;
    background: none;
    &:focus {
      outline: none;
    }
  }

  label {
    @include type-h3;
    font-size: 10px;
  }

  input {
    border: none;
    padding: 14px 0;
    font-size: 16px;
    border-bottom: 1px solid;
  }

  textarea {
    font-size: 16px;
    padding: $padding;
    border: 1px solid;
  }

  // Error Labels
  label.error {
    width: 100%;
    display: block;
    padding: 7px 20px;
    background: rgba($gray-dark,.5);
  }

  // File input type
  .file-input-wrap {
    display: block;
    box-shadow: inset 0 0 0 1px $black;

    label {
      max-width: none;
      cursor: pointer;
      padding: $padding $padding 0;
    }

    input[type=file] {
      border: none;
      cursor: pointer;
      border-radius: 0;
      color: transparent;
      padding: 0 $padding $padding;
      border-left: 1px solid $black;
      border-right: 1px solid $black;
    }

    input[type=file]::-webkit-file-upload-button {
      visibility: hidden;
    }
    input[type=file]::before,
    input[type=file]::after {
      outline: none;
      display: inline-block;
      -webkit-user-select: none;
    }
    input[type=file]::before {
      color: $black;
      font-size: 12px;
      white-space: nowrap;
      text-decoration: underline;
      content: attr(data-content);
    }
    .attach-files-label {
      padding: 20px;
      display: block;
    }
    .files-attached {
      p {
        margin: 0;
        font-size: 12px;
        padding: 0 $padding;
      }
    }
  }
}

// Custom radio buttons
.radio-wrap {

  input[type=radio] {
    display: none;
  }

  input[type=radio] + label {
    display: block;
    min-height: 30px;
    line-height: 30px;
    padding-left: 40px;
    position: relative;
    font-size: 14px;
    letter-spacing: .7px;
    &::before,
    &::after {
      content: '';
      border-radius: 50%;
      position: absolute;
    }
    &::before {
      top: 0;
      left: 0;
      width: 30px;
      height: 30px;
      border: 5px solid;
      // border-color: $color; in _color-themes.scss
    }
    &::after {
      top: 9px;
      left: 9px;
      width: 12px;
      height: 12px;
      display: none;
      // background: $color; in _color-themes.scss
    }
  }

  input[type=radio]:checked + label {
    &::after {
      display: block;
    }
  }
}

// Custom select styles
.select-wrapper {
  margin: 0;
  padding: 0;
  position: relative;
  border-bottom: 1px solid $black;
  select {
    width: 100%;
    border: none;
    padding: 20px 0;
    box-shadow: none;
    background: none;
    border-radius: 0;
    @extend .type-h3;
    font-size: 16px;
    padding-right: 28px;
    -webkit-appearance: none;
    &:focus {
      outline: none;
    }
  }
  &::after {
    right: 0;
    content: '';
    width: 15px;
    bottom: 22px;
    height: 10px;
    position: absolute;
    pointer-events: none;
    background: url("../images/select-arrow.svg") no-repeat center center;
    background-size: 10px 15px;
  }
}

// Events/News filters have slightly different style
.filters {
  .program-topic,
  .focus-area-topic {
    overflow: hidden;
    white-space: nowrap;
  }
}
// go firefox!
@-moz-document url-prefix() {
  .filters .select-wrapper select {
    -moz-appearance: none;
  }
}

// Overrides for Blackbaud embedded forms
.BBFormFieldContainer {
  position: relative;
  &::after {
    left: 0;
    right: 0;
    bottom: 0;
    height: 1px;
    content: '';
    position: absolute;
    background-color: $white-dark;
    transition: height .1s ease-out, background-color .1s ease-out;
  }
  &.-focus {
    &::after {
      height: 5px;
    }
  }
}
.bb-form {
  form {
    padding: 0!important;
    border: none!important;
  }
}
#mongo-form,
#mongo-form-38ced2e2-cad0-4cec-baa5-4e97cce64789 {
  @include type-h3;

  .BBFormTextbox,
  .BBFormTextArea {
    opacity: 1;
    width: 100%;
    display: block;
    appearance: none;
    border-radius: 0;
    background: none;
    @include type-h3;
    font-size: 16px;
    color: $white-dark;
    &:focus {
      outline: none;
      box-shadow: none;
    }
    &::placeholder {
      font-size: 14px;
      color: $white-dark;
      text-transform: capitalize;
    }
  }

  .BBFormTextbox {
    border: none;
    padding: 14px 0;
    border-bottom: 1px solid;
  }

  .BBFormTextArea {
    padding: $padding;
    border: 1px solid;
  }

  .BBFormContainer {
    padding: 0;
    border: none;
    border-radius: 0;
    .BBFormFieldContainer {
      margin-left: 0;
      margin-right: 0;
      color: $white-dark;
    }
  }

  .BBFormSection {
    legend + .BBFormFieldContainer {
      &::after {
        display: none;
      }
    }
  }

  fieldset {
    padding: 0!important;
    border: none!important;
  }

  .BBFormSubSectionHeading {
    width: 100%;
    margin-bottom: 20px;
    @include type-h3;
    &:empty {
      display: none;
    }
  }

  .BBFormSection {
    margin: 0;
    padding-bottom: 60px;
    p {
      @include type-h3;
    }
  }

  .BBFormSubmitbutton,
  .BBFormRadioLabel {
    @extend .button;
    margin-top: 20px;
    border-radius: 0;
    box-shadow: none;
  }

  // Table style
  .BBFormTable {
    background: none;
    border-radius: 0;
  }

  // Email signup sepcific
  .BBFormSectionHeading {
    display: none;
  }
}

// Messaging/loading
#bbox-msg-wrapper {
  img {
    display: none;
  }
}

// Registration Form Mods
#register #mongo-form {

  .BBFormContainer {

    .BBFormFieldContainer {
      color: $black;

      &::after {
        background-color: $black;
      }
    }

  }

  .BBFormTextbox,
  .BBFormTextArea {
    color: $black;
    max-width: 100%;
    &::placeholder {
      color: rgba($black,.6);
    }
  }

  .BBFormSection {
    padding-bottom: 0;
  }

  // "1 Registrant" text they don't want displayed
  #bboxevent_priceselect_ctl00_lblPriceRegCount {
    display: none;
  }

  .BBFormTableHeader {
    border-bottom-color: $black;
  }

  .BBFormTable {
    padding: 0;
    border: none;
  }

  .BBFormButtonRow {
    .BBFormFieldContainer {
      &::after {
        display: none;
      }

      input {
        width: 100%;
      }
    }
  }

}

